# 2d_2d

./: CMakeLists.txt  Calibration.cpp  Calibration.h  Center_detection.cpp  Center_detection.h  JsonCheck.cpp  JsonCheck.h  LC.hpp  Outlier_angle.cpp  Outlier_angle.h  S_F_B.cpp  S_F_B.h  blob_detection.cpp  blob_detection.h  blob_pixels.csv  crop_image.cpp  crop_image.h  dbscan.cpp  dbscan.h  decompose_camera.h  final_plate_points.txt  icp.cpp  icpPlatFid.txt  icp_2D.txt  icp_angle.cpp  icp_angle.h  kmeans.cpp  kmeans.h  maindcm.cpp  maindcmbatch.cpp  normalise2dpts.h  plate12icp.cpp  plate12icp.h  plate12icp_fixed.cpp  plate12indexing.cpp  plate12indexing.h  plate12withICP.h  rq3.h
